style changes to fix layout issues upon hover

--- a/style/style.css
+++ b/style/style.css
@@ -25,13 +25,15 @@ th {
 }
 
 th>svg {
-  display: none;
+  /* display: none; */
   color: blue;
   border: none;
+  visibility: hidden;
 }
 
 th:hover svg {
-  display: inline;
+  /* display: inline; */
+  visibility: visible;
 }
 
 td {
